--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Russo+One|Oxygen+Mono" rel="stylesheet">
-    <title>ggj18kh</title>
-  </head>
-  <body style="background-color: black; height: 100vh;">
-    <div class="container" style="display: flex; justify-content: center; align-items: center; height: 100vh;">
-      <div style="font-family: 'Russo One', sans-serif; font-size: 40px; color: white;">
-        Coming soon...
-      </div>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><script src=https://player.twitch.tv/js/embed/v1.js></script><script>window.twttr = (function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0],
+        t = window.twttr || {};
+      if (d.getElementById(id)) return t;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "https://platform.twitter.com/widgets.js";
+      fjs.parentNode.insertBefore(js, fjs);
+
+      t._e = [];
+      t.ready = function(f) {
+        t._e.push(f);
+      };
+
+      return t;
+    }(document, "script", "twitter-wjs"));</script><link href="https://fonts.googleapis.com/css?family=Russo+One|Oxygen+Mono" rel=stylesheet><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PXT99NW');</script><title>ggj18kh</title><link href=/static/css/app.743d8a2ff6f93d1ccc6982677d1e5193.css rel=stylesheet></head><body><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXT99NW" height=0 width=0 style=display:none;visibility:hidden></iframe></noscript><div id=app></div><script type=text/javascript src=/static/js/manifest.a3cea3514ccb85b6b10c.js></script><script type=text/javascript src=/static/js/vendor.5706d6c89c9b09c8105b.js></script><script type=text/javascript src=/static/js/app.753f666437768f4f94f0.js></script></body></html>
