--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-PXT99NW');</script>
     <!-- End Google Tag Manager -->
+
+    <meta property="og:url" content="https://ggj18.sligrid.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Nonstop Jamming">
+    <meta property="og:description" content="Hand-curated realtime board for GGJ18, made with ❤️ by GGJKH and Sligrid.">
+    <meta property="og:image" content="https://ggj18.sligrid.com/static/twitter-image.jpg">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="ggj18kh">
+    <meta name="twitter:creator" content="@sligrid">
+    <meta name="twitter:title" content="Nonstop Jamming">
+    <meta name="twitter:description" content="Hand-curated realtime board for GGJ18, made with ❤️ by GGJKH and Sligrid.">
+    <meta name="twitter:image" content="https://ggj18.sligrid.com/static/twitter-image.jpg">
+
     <title>ggj18kh</title>
   </head>
   <body>
